removing some of the shenanigans caused by not being able to access Bridje classes directly