@@ -57,6 +57,7 @@ tasks.test {
     jvmArgs(
         "-Dtruffle.class.path.append=${sourceSets.main.get().runtimeClasspath.asPath}",
         "--add-exports=org.graalvm.truffle/com.oracle.truffle.api.interop=ALL-UNNAMED",
+        "--add-exports=org.graalvm.truffle/com.oracle.truffle.api.source=ALL-UNNAMED",
         "--add-exports=org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED")
 }
 
